src/test/deca/context/invalid/inheritance/instanceof_invalid_types_2.deca
// Description :
//    Utilisation de instanceof avec une expression non objet.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    float f = 1.0;
    boolean b = f instanceof Object;
}

